--- a/fashion_blog_api/pom.xml
+++ b/fashion_blog_api/pom.xml
@@ -97,6 +97,14 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>2.0.9</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
