--- a/fashion_blog_api/pom.xml
+++ b/fashion_blog_api/pom.xml
@@ -104,6 +104,11 @@
 			<version>2.0.9</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.33.0</version>
+		</dependency>
 
 	</dependencies>
 
