SwaggerConfig class seperated

--- a/fashion_blog_api/src/main/resources/application.properties
+++ b/fashion_blog_api/src/main/resources/application.properties
@@ -24,6 +24,11 @@ spring.jpa.properties.hibernate.jdbc.time_zone=UTC+1
 springdoc.api-docs.enabled=true
 springdoc.api-docs.path=/javainuse-openapi/index.html
 
+## ===========================================================
+## = SWAGGER
+## ===========================================================
+#spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
 
 #logging.level.org.springframework=ERROR
 #logging.level.com.mkyong=DEBUG
