Security details hidden, custom banner added

--- a/fashion_blog_api/src/main/resources/application.properties
+++ b/fashion_blog_api/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/fashion_blog_db
-spring.datasource.username=postgres
-spring.security.user.password=password
+spring.datasource.url= ${POSTGRES_DB_URL}
+spring.datasource.username=${POSTGRES_DB_USERNAME}
+spring.security.user.password=${POSTGRES_DB_PASSWORD}
 
 
 # Update database
@@ -10,9 +10,14 @@ spring.jpa.properties.hibernate.show_sql=true
 
 server.port=1001
 
+# Cloudinary details
+cloudinary.name=${CLOUDINARY_NAME}
+cloudinary.api_key=${CLOUDINARY_API_KEY}
+cloudinary.secrete=${CLOUDINARY_SECRETE}
+
 
 # Turn of spring boot banner
-spring.main.banner-mode=off
+#spring.main.banner-mode=off
 
 # Reduce logging level. Set logging level
 
